# lex-vector

./: .gitignore  LICENSE  README.md  activate_env.sh  pyproject.toml
docs/notebook/5-embedding-adaptors/: helper_utils.py
src/: run.py
src/client/: chroma.py
src/conf/: trial.yaml
src/conf/rag/: baseline.yaml
src/rag/: __init__.py  baseline.py
src/utils/: constants.py  methods.py
